--- a/style.css
+++ b/style.css
@@ -5,5 +5,5 @@ box-sizing: border-box
 body{
     margin: 0;
     min-height: 100vh;
-    background-color: green;
+    background-color: purple;
 }
